--- a/dopeticksApp/requirements.txt
+++ b/dopeticksApp/requirements.txt
@@ -1,3 +1,4 @@
+asgiref==3.6.0
 awsebcli==3.20.5
 bcrypt==4.0.1
 botocore==1.29.81
@@ -7,6 +8,7 @@ charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.3
 distlib==0.3.6
+Django==4.1.7
 dnspython==2.2.1
 email-validator==1.3.1
 filelock==3.8.2
