--- a/dopeticksApp/requirements.txt
+++ b/dopeticksApp/requirements.txt
@@ -28,12 +28,10 @@ mysql-connector-python==8.0.32
 pathspec==0.10.1
 Pillow==9.4.0
 platformdirs==2.6.0
-psycopg2==2.9.5
+psycopg2-binary==2.9.5
 pymongo==4.3.3
-pypiwin32==223
 python-dateutil==2.8.2
 python-dotenv==0.21.0
-pywin32==305
 PyYAML==5.4.1
 requests==2.26.0
 semantic-version==2.8.5
