--- a/.ebextensions/01_flask.config
+++ b/.ebextensions/01_flask.config
@@ -6,5 +6,5 @@ option_settings:
 
 container_commands:
   01_initdb:
-    command: "source /var/app/venv/*/bin/activate && python3 run.py"
+    command: "source /var/app/venv/*/bin/activate && python run.py"
     leader_only: true
