--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 */__pycache__/*
 dopeticksApp/venv/
 dopeticksApp/dopeticks/__pycache__/*
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
