small changes to .ebignore and .gitignore to ensure that pycache isn't synced with github/eb

--- a/.ebignore
+++ b/.ebignore
@@ -2,3 +2,6 @@ venv
 */__pycache__/*
 dopeticks/__pycache__/*
 .idea
+dopeticks/main/__pycache__/*
+dopeticks/tasks/__pycache__/*
+dopeticks/users/__pycache__/*
