--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ dopeticks/__pycache__/*
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+dopeticks/main/__pycache__/*
+dopeticks/tasks/__pycache__/*
+dopeticks/users/__pycache__/*
